--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-portfolio-challenge-20",
-  "homepage": "https://github.com/ekellv/React-Portfolio",
+  "homepage": "https://ekellv.github.io/React-Portfolio/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
